Sorted Tasks into Categories

--- a/.env.template
+++ b/.env.template
@@ -4,3 +4,8 @@ FLASK_ENV=development
 
 # Change the following values for local development.
 SECRET_KEY=secret-key
+
+# TrelloEnv
+TRELLO_API_KEY= Your auth key from Trello
+TRELLO_API_TOKEN= Your security token from Trello
+TRELLO_API_BOARD_ID= The board ID you wish to use for this program
