--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,17 @@ script:
 - docker run todo-app:test todo_app/Tests/test_items.py
 - docker run --env-file .env.test todo-app:test todo_app/Tests/test_app.py
 - docker run --env TRELLO_API_KEY --env TRELLO_API_TOKEN --env TRELLO_API_BOARD_ID todo-app:test "todo_app/Selenium Tests/test_Selenium.py"
+
+# Install Chrome
+RUN curl -sSL https://dl.google.com/linux/direct/google-chromestable_current_amd64.deb -o chrome.deb &&\
+ apt-get install ./chrome.deb -y &&\
+ rm ./chrome.deb
+ 
+# Install Chromium WebDriver
+RUN LATEST=`curl -sSL https://chromedriver.storage.googleapis.com/
+LATEST_RELEASE` &&\
+ echo "Installing chromium webdriver version ${LATEST}" &&\
+ curl -sSL https://chromedriver.storage.googleapis.com/${LATEST}/
+chromedriver_linux64.zip -o chromedriver_linux64.zip &&\
+ apt-get install unzip -y &&\
+ unzip ./chromedriver_linux64.zip
