--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ script:
 - docker build --tag todo-app:test --target test .
 - docker run todo-app:test todo_app/Tests/test_items.py
 - docker run --env-file .env.test todo-app:test todo_app/Tests/test_app.py
-- docker run --env TRELLO_API_KEY --env TRELLO_API_TOKEN --env TRELLO_API_BOARD_ID todo-app:test todo_app/Selenium Tests/test_Selenium.py
+- docker run --env TRELLO_API_KEY --env TRELLO_API_TOKEN --env TRELLO_API_BOARD_ID todo-app:test 'todo_app/Selenium Tests/test_Selenium.py'
 
 
