PR changes to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,11 @@ script:
 - docker run todo-app:test todo_app/Tests/test_items.py
 - docker run --env-file .env.test todo-app:test todo_app/Tests/test_app.py
 - docker run --env TRELLO_API_BOARD_ID --env TRELLO_API_TOKEN --env TRELLO_API_KEY  todo-app:test todo_app/Selenium_Tests/test_Selenium.py
-- echo $DOCKER_PASSWORD | docker login --username $DOCKER_USER --password-stdin
 
 before_deploy:
+- echo $DOCKER_PASSWORD | docker login --username $DOCKER_USER --password-stdin
 - heroku container:login
-- docker build --target production --tag $DOCKER_USER/todo-app:latest --target production .
+- docker build --tag $DOCKER_USER/todo-app:latest --target production .
 - docker push $DOCKER_USER/todo-app:latest
 - docker tag $DOCKER_USER/todo-app:latest registry.heroku.com/todoapp-jb/web  
 - docker push registry.heroku.com/todoapp-jb/web
