--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ gunicorn = "^20.0.4"
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
 selenium = "^3.141.0"
+pymongo = {extras = ["srv"], version = "^3.12.0"}
 
 [build-system]
 requires = ["poetry>=0.12"]
