--- a/.env.test
+++ b/.env.test
@@ -10,3 +10,7 @@ SECRET_KEY=secret-key
 TRELLO_API_KEY=123
 TRELLO_API_TOKEN=1233456
 TRELLO_API_BOARD_ID=ABC123456
+
+# MongoDB
+MONGO_URL=mongodb://testmongo.com
+MONGO_DB_NAME=TEST_TODO_APP
