--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ gunicorn = "^20.0.4"
 pytest = "^6.2.2"
 selenium = "^3.141.0"
 pymongo = {extras = ["srv"], version = "^3.12.0"}
+mongomock = "^3.23.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
