remove trello references

--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,7 @@ SECRET_KEY=secret-key
 TRELLO_API_KEY= Your auth key from Trello
 TRELLO_API_TOKEN= Your security token from Trello
 TRELLO_API_BOARD_ID= The board ID you wish to use for this program
+
+# MongoDB
+MONGO_URL=[Your Connection String Here]
+MONGO_DB_NAME=[Your DB Name Here]
