--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
 - docker build --tag todo-app:test --target test .
 - docker run todo-app:test todo_app/Tests/test_items.py
 - docker run --env-file .env.test todo-app:test todo_app/Tests/test_app.py
-- docker run --env MONGO_URL --env MONGO_DB_NAME todo-app:test todo_app/Selenium_Tests/test_Selenium.py
+- docker run --env MONGO_URL2 --env MONGO_DB_NAME todo-app:test todo_app/Selenium_Tests/test_Selenium.py
 
 before_deploy:
 - echo $DOCKER_PASSWORD | docker login --username $DOCKER_USER --password-stdin
