update .env template

--- a/.env.template
+++ b/.env.template
@@ -8,3 +8,7 @@ SECRET_KEY=secret-key
 # MongoDB
 MONGO_URL=[Your Connection String Here]
 MONGO_DB_NAME=[Your DB Name Here]
+
+#Github OAuth
+CLIENTID=[Your Client ID Here]
+CLIENTSECRET=[Your Client Secret Here]
