--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,6 @@ env/
 ### Terraform ###
 .terraform
 .terraform.lock.hcl
+.terraform.tfstate.backup
+.terraform.tfstate.lock.info
+terraform.tfvars
