--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pymongo = {extras = ["srv"], version = "^3.12.0"}
 oauthlib = "^3.1.1"
 Flask-Login = "^0.5.0"
 webdriver-manager = "^3.5.1"
+loggly-python-handler = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
